Source/WebCore/workers/shared/SharedWorker.cpp
@@ -74,8 +74,9 @@ ExceptionOr<Ref<SharedWorker>> SharedWorker::create(Document& document, String&&
     if (!url.isValid())
         return Exception { SyntaxError, "Invalid script URL"_s };
 
-    if (url.isLocalFile())
-        return Exception { SecurityError, "Cannot construct a shared worker with a file:// URL"_s };
+    // Per the specification, any same-origin URL (including blob: URLs) can be used. data: URLs can also be used, but they create a worker with an opaque origin.
+    if (!document.securityOrigin().canRequest(url) && !url.protocolIsData())
+        return Exception { SecurityError, "URL of the shared worker is cross-origin"_s };
 
     if (auto* contentSecurityPolicy = document.contentSecurityPolicy()) {
         if (!contentSecurityPolicy->allowWorkerFromSource(url))
